stop using a keyword reserved in many languages

--- a/model/metamodel/entity.yml
+++ b/model/metamodel/entity.yml
@@ -258,12 +258,12 @@ entities:
     - from: subtype_of
       to: name
     examples:
-    - when: |
+    - when_invoking: |
         entities.find{ it.name == "party" }?.supertype
       then_returns: |
         null
 
-    - when: |
+    - when_invoking: |
         entities.find{ it.name == "person" }?.supertype?.name
       then_returns: |
         "party"
