update the project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,34 @@
+# General
+*.tmp
+*.log
+*.swp
+
+# General - Windows
+Thumbs.db
+*.lnk
+~$*
+
+
+# General - MacOS
 .DS_Store
+
+# VSCode
+vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Java development
+.metadata
+.project
+.classpath
+.settings/
+.gradle/
+.idea/
+bin/
 build/
 out/
-.gradle/
-*.log
-*.class
-*.jar
-!gradle-wrapper.jar
-.git/
-.gitignore
-.bzr/
-.bzrignore
-.hg/
-.hgignore
-.svn/
-*.swp
-*.bak
-*.tmp
-*~
-.project
-.idea/
-*.iml
-*.tmproj
-.vscode/
-# @additional_entries@
-# @additional_entries@
+
+# Laplacian projects
