--- a/model/project.yaml
+++ b/model/project.yaml
@@ -14,7 +14,7 @@ project:
   schemas: []
   plugins:
   - group: laplacian
-    name: schema.metamodel
+    name: metamodel-plugin
     version: '1.0.0'
   - group: laplacian
     name: project.schema-plugin
