--- a/model/project.yaml
+++ b/model/project.yaml
@@ -28,10 +28,8 @@ project:
     version: '1.0.0'
   models:
   - group: laplacian
-    name: metamodel
-    version: '1.0.0'
-  - group: laplacian
     name: project.document-content
     version: '1.0.0'
-  model_files: []
+  model_files:
+  - src/
   template_files: []
