update project template

--- a/model/project.yaml
+++ b/model/project.yaml
@@ -1,7 +1,7 @@
 project:
   group: laplacian
   name: metamodel
-  type: model
+  type: schema-model
   namespace: laplacian.metamodel
   version: '1.0.0'
   description: |
@@ -10,26 +10,5 @@ project:
   source_repository:
     url: https://github.com/nabla-squared/laplacian.metamodel.git
     branch: master
-  subprojects: []
-  schemas: []
-  plugins:
-  - group: laplacian
-    name: metamodel-plugin
-    version: '1.0.0'
-  - group: laplacian
-    name: project.schema-plugin
-    version: '1.0.0'
-  templates:
-  - group: laplacian
-    name: project.base-template
-    version: '1.0.0'
-  - group: laplacian
-    name: schema.document-template
-    version: '1.0.0'
-  models:
-  - group: laplacian
-    name: project.document-content
-    version: '1.0.0'
   model_files:
   - src/
-  template_files: []
