--- a/src/entities/value_domain.yml
+++ b/src/entities/value_domain.yml
@@ -7,7 +7,7 @@ entities:
 
       - name: type
         type: string
-        domain_type_name: base_type
+        domain_type_name: basic_type
 
       - name: description
         type: string
