update the json-schema

--- a/model/project.yaml
+++ b/model/project.yaml
@@ -37,7 +37,7 @@ project:
     branch: master
   module_repositories:
     local:
-      path: ../../../mvn-repo
+      ../../../mvn-repo
     remote:
     - https://github.com/nabla-squared/mvn-repo
   model_files:
