--- a/src/model/entities/value_domain.yaml
+++ b/src/model/entities/value_domain.yaml
@@ -4,13 +4,13 @@ entities:
   value_object: true
   properties:
   - name: pattern
-    description: 許容される値のパターン(正規表現)
+    description: Allowed pattern in Regular expression.
     type: string
     optional: true
 
   relationships:
   - name: choices
-    description: 許容される値のリスト
+    description: The list of allowed values.
     cardinality: "*"
     reference_entity_name: value_item
     aggregate: true
