--- a/src/model/entities/property.yaml
+++ b/src/model/entities/property.yaml
@@ -41,9 +41,7 @@ entities:
     default_value: |
       when(type) {
           "string" -> 200
-          else -> throw IllegalStateException(
-              "The size of $type type field can not be defined."
-          )
+          else -> 0
       }
 
   - name: optional
