add a property of database table name

--- a/src/model/entities/entity.yaml
+++ b/src/model/entities/entity.yaml
@@ -45,10 +45,17 @@ entities:
 
   - name: class_name
     type: string
-    snippet: >
-      identifier.upperCamelize()
+    optional: true
+    default_value: >
+      name.upperCamelize()
     example_values:
     - Party
+
+  - name: table_name
+    type: string
+    optional: true
+    default_value: |
+      "t_${name.lowerUnderscorize()}"
 
   - name: supertype_name
     type: string
